Fixed the collapse menu in mobile view

--- a/app/views/changelog.html
+++ b/app/views/changelog.html
@@ -13,6 +13,10 @@
         <h3 class="modal-title">Changelog</h3>
       </div>
       <div class="modal-body">
+        <h4>30/06/2014</h4>
+        <li>Added scholar profile.</li>
+        <li>Publications updated.</li>
+        <li>Fixed bug in publications.</li>
         <h4>07/06/2014</h4>
         <ul>
           <li>Animations! Wow library to add some fancy animation.</li>
