--- a/app/views/personal.html
+++ b/app/views/personal.html
@@ -6,7 +6,7 @@
 
       <div class="hero-unit">
         <p>
-          I I like to learn and discover new topics. I took some courses (MOOCs) from the platforms <a href="http://www.coursera.org">Coursera</a>
+          I like to learn and discover new topics. I took some courses (MOOCs) from the platforms <a href="http://www.coursera.org">Coursera</a>
           and <a href="http://www.udacity.com">Udacity</a>.
         </p>
         <p>
